[package]
name = "melon-pan-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
melon-pan-core = { path = "../melon-pan-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
